# template_helloworld_lib

./: LICENSE  pyproject.toml
.github/workflows/: ci.yml
src/template_helloworld_lib/: __init__.py  helloworld.py
tests/: test_helloworld.py
