[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"
[project]
name = "template_helloworld_lib"
version = "0.1.0"
description = "A template for a hello world library with unit testing included."
authors = [
    { name = "Ioannis Krommydas", email = "ioannis@krommydas.de" }
]
requires-python = ">=3.9"
keywords = ["template", "hello", "library"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License"
]
[project.urls]
Repository = "https://github.com/krommydas-ioannis/template_helloworld_lib"
[tool.setuptools]
packages = ["template_helloworld_lib"]
package-dir = {"" = "src"}